--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1",
     "react-intl": "^6.6.8",
+    "react-lazy-load-image-component": "^1.6.2",
+    "react-lazyload": "^3.2.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
